# SDL2

./: CMakeLists.txt  main.cpp
Graphics/: Color.cpp  Color.h  Screen.cpp  Screen.h  ScreenBuffer.cpp  ScreenBuffer.h
utils/: Utils.cpp  Utils.h  Vec2D.cpp  Vec2D.h
